<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ListFilmsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expandableRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.example.loadinganimation.LoadingAnimation
        style="@style/LoadAnimationStyle"
        android:id="@+id/loadingAnim"
        app:barType="@drawable/fidget"
        app:boldText="false"
        app:enlarge="5"
        app:textColor="@color/purple_500"
        app:textSize="15sp"
    />

</FrameLayout>